--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,12 +5,12 @@ on:
       - main
       - stage
     paths:
-      - terraform/**
+      - 'terraform/**'
   pull_request:
     branches:
       - main
     paths:
-      - terraform/**
+      - 'terraform/**'
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
